<resources>
    <string name="app_name">Xebird</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">XeBird</string>
    <string name="second_fragment_label">Detail Info</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="default_search">石鸡</string>
    <string name="start_content">XeBird</string>
    <string name="search_hint">Please enter bird name</string>
    <string name="search">Search</string>
    <string name="picture_to_display">picture to display</string>
    <string name="start_picture">start picture</string>
    <string name="null_searchede">Nothing found!</string>
    <string name="null_input">何も入れない</string>
    <string name="search_icon">Search</string>

    <!-- for IndexFragment-->
    <string name="explore_birds">Explore birds</string>
    <string name="start_a_checklist">Start a checklist</string>
    <string name="all_records">All Records</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timer_title">Timer:  </string>
    <string name="timer">00:00:00</string>
    <string name="location">Location</string>
    <string name="latitude">Getting latitude…</string>
    <string name="longitude">Getting longitude…</string>
    <string name="checklist_comments_title">Checklist Comments:</string>
    <string name="profile_image">Profile image</string>
    <string name="explore">Explore</string>
    <string name="record">Record</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="add_button">add</string>
    <string name="icon">icon</string>
    <string name="bird_list_details">Details</string>
    <string name="bird_list_add">Add</string>
    <string name="bird_count">Bird Count</string>
    <string name="bird_name">Bird Name</string>
    <string name="bird_location">Bird Location</string>
    <string name="bird_count_default_value">1</string>
    <string name="bird_comments_title">Comments</string>
    <string name="comments_hint">Put your comments here</string>
    <string name="submit_birdRecord">Submit</string>
    <string name="error_count_positive_interger">Bird count must be a positive integer!</string>
    <string name="error_count_empty">Bird count can  not be empty!</string>
    <string name="default_birdcount">1</string>
    <string name="submit_checklist">Submit</string>
    <string name="start_time_title">Start at:</string>
    <string name="start_time_default_value">00:00:00</string>
    <string name="location_hint">Location</string>
    <string name="autofill_button">Autofill</string>
    <string name="observers_hint">Observers</string>
    <string name="all_observations_reported">All observations\nreported?</string>
    <string name="item_name_label">名称</string>
    <string name="item_count_label">数量</string>
    <string name="spliter">spliter</string>


</resources>
