<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="language and country">

        <ListPreference
            app:title="country"
            app:useSimpleSummaryProvider="true"
            app:key="contry"
            app:entries="@array/country"
            app:entryValues="@array/country"
            app:defaultValue="CHINA" />

        <ListPreference
            app:title="language"
            app:useSimpleSummaryProvider="true"
            app:key="language"
            app:entries="@array/language"
            app:entryValues="@array/language"
            app:defaultValue="SIMPLY_CHINESE" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="About">

        <Preference
            app:key="Github"
            app:title="@string/app_name"
            app:summary="https://github.com/XeBird/Xebird.git" />

        <Preference
            app:key="mail"
            app:title="Feedback"
            app:summary="Guan810@foxmail.com" />

    </PreferenceCategory>

</PreferenceScreen>