<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBirdRecordFragment">

    <Button
        android:id="@+id/auto_fill_button2"
        style="@android:style/Widget.Material.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/autofill_button"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@id/Latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Longitude" />

    <TextView
        android:id="@+id/addBirdRecord_birdname_title"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bird_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/addBirdRecord_birdname"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bird_name"
        app:layout_constraintBaseline_toBaselineOf="@id/addBirdRecord_birdname_title"
        app:layout_constraintLeft_toRightOf="@id/addBirdRecord_birdname_title" />

    <TextView
        android:id="@+id/addBirdRcord_birdcount_title"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/bird_count"
        app:layout_constraintLeft_toLeftOf="@id/addBirdRecord_birdname_title"
        app:layout_constraintTop_toBottomOf="@id/addBirdRecord_birdname_title" />


    <EditText
        android:id="@+id/addBirdRcord_birdcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:ems="10"
        android:hint="@string/bird_count_default_value"
        android:text="@string/default_birdcount"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@id/addBirdRcord_birdcount_title"
        app:layout_constraintLeft_toRightOf="@id/addBirdRcord_birdcount_title"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="86dp" />

    <TextView
        android:id="@+id/addBirdRecord_location_title"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/bird_location"
        app:layout_constraintLeft_toLeftOf="@id/addBirdRcord_birdcount_title"
        app:layout_constraintTop_toBottomOf="@id/addBirdRcord_birdcount_title" />


    <EditText
        android:id="@+id/addBirdRecord_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bird_location"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@id/addBirdRecord_location_title"
        app:layout_constraintLeft_toRightOf="@id/addBirdRecord_location_title" />

    <TextView
        android:id="@+id/Latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/latitude"
        app:layout_constraintLeft_toLeftOf="@id/addBirdRecord_location_title"
        app:layout_constraintTop_toBottomOf="@id/addBirdRecord_location_title" />

    <TextView
        android:id="@+id/Longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/longitude"
        app:layout_constraintLeft_toRightOf="@id/Latitude"
        app:layout_constraintTop_toTopOf="@id/Latitude" />

    <TextView
        android:id="@+id/addBirdRecord_comments_title"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/bird_comments_title"
        app:layout_constraintLeft_toLeftOf="@id/addBirdRecord_birdname_title"
        app:layout_constraintTop_toBottomOf="@id/Latitude" />

    <EditText
        android:id="@+id/addBirdRecord_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:hint="@string/comments_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@id/addBirdRecord_comments_title"
        app:layout_constraintTop_toBottomOf="@id/addBirdRecord_comments_title" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/submit_birdRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBirdRecord_comments" />

</androidx.constraintlayout.widget.ConstraintLayout>